src/sections/Sponsors/Sponsors.css
.sponsors-root {
  position: relative;
  width: 100%;
}

.banner-safezone {
  position: relative;

  padding-top: clamp(6rem, 12vw, 14rem);
  padding-bottom: 2rem;
  
  display: flex;
  align-items: flex-end;
  overflow: visible;

  z-index: 1;
}

.banner-row {
  display: flex;
  justify-content: center;
  align-items: flex-end;

  gap: clamp(0.75rem, 1.5vw, 1.25rem);

  width: 100%;
}

.banner {
  position: relative;
  width: clamp(120px, 30vw, 220px);
  transform-origin: bottom center;
}

/* Left-side Banners */
.banner---1 {
  transform: translateY(6px) rotate(-1.5deg);
}

.banner--0 {
  /*transform: rotate(-1.5deg)*/;
}

/* Right-side Banners */
.banner--1 {
  transform: translateY(6px) rotate(1.5deg);
}

.banner--featured {
  width: clamp(120px, 30vw, 220px);

  transform: translateY(-2px) scale(1.1);
  /*z-index: 2;*/
}

.banner img {
  width: 100%;
  height: auto;
  display: block;
  aspect-ratio: 400 / 369.44444444444446;
}

/* placeholder for banner icons */
.banner-logo {
  position: absolute;
  inset: 0;

  display: grid;
  place-items: center;

  padding: 1.25rem;
  pointer-events: none;
}

.banner-logo img {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain;
  transform: scale(var(--scale-x), var(--scale-y));
}

@media (max-width: 768px) {
  .banner-safezone {
    align-items: flex-start;
    padding-top: 3rem;
    padding-bottom: 1rem;
  }

  .banner-row {
    gap: 1rem;
  }

  .banner img {
    aspect-ratio: auto;
  }

  .banner--featured .banner-logo img {
    transform: translateY(-10px) scale(var(--scale-x), var(--scale-y));
  }
}

